crates/wdl-grammar/tests/parsing/recovery-past-string/source.wdl
# This is a test of recovery past an interpolation (i.e. a string).

version 1.1

task test {
    meta {
        "invalid": "~{value}"
        correct: "value"
    }
}
